DbaApi için Contact, ContactInfo,ContactType tablo modelleri oluşturuldu - EntityFrameworkCore ve Postgresql paketleri yüklendi - AppSettings içerisinden connection bilgileri alınması için paketler yüklendi - Migration işlemi yapılarak Postgresql üzerine tablolar aktarıldı Projelerin katman ilişkileri yapıldı

--- a/ApiGroup/Dba/Rise.PhoneBook.DbaApi.Business/Rise.PhoneBook.DbaApi.Business.csproj
+++ b/ApiGroup/Dba/Rise.PhoneBook.DbaApi.Business/Rise.PhoneBook.DbaApi.Business.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ApiCore\Rise.PhoneBook.ApiCore.Core\Rise.PhoneBook.ApiCore.Core.csproj" />
+    <ProjectReference Include="..\Rise.PhoneBook.DbaApi.DataAccess\Rise.PhoneBook.DbaApi.DataAccess.csproj" />
+    <ProjectReference Include="..\Rise.PhoneBook.DbaApi.Entities\Rise.PhoneBook.DbaApi.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
