--- a/ApiGroup/Dba/Rise.PhoneBook.DbaApi.Entities/Rise.PhoneBook.DbaApi.Entities.csproj
+++ b/ApiGroup/Dba/Rise.PhoneBook.DbaApi.Entities/Rise.PhoneBook.DbaApi.Entities.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="ComplexTypes\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\ApiCore\Rise.PhoneBook.ApiCore.Core\Rise.PhoneBook.ApiCore.Core.csproj" />
+  </ItemGroup>
+
 </Project>
