--- a/ApiGroup/Report/Rise.PhoneBook.ReportApi.Entities/Rise.PhoneBook.ReportApi.Entities.csproj
+++ b/ApiGroup/Report/Rise.PhoneBook.ReportApi.Entities/Rise.PhoneBook.ReportApi.Entities.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ApiCore\Rise.PhoneBook.ApiCore.Core\Rise.PhoneBook.ApiCore.Core.csproj" />
+  </ItemGroup>
+
 </Project>
