--- a/ApiGroup/Dba/Rise.PhoneBook.DbaApi.WebApi/Rise.PhoneBook.DbaApi.WebApi.csproj
+++ b/ApiGroup/Dba/Rise.PhoneBook.DbaApi.WebApi/Rise.PhoneBook.DbaApi.WebApi.csproj
@@ -6,4 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\ApiCore\Rise.PhoneBook.ApiCore.Core\Rise.PhoneBook.ApiCore.Core.csproj" />
+    <ProjectReference Include="..\Rise.PhoneBook.DbaApi.Business\Rise.PhoneBook.DbaApi.Business.csproj" />
+  </ItemGroup>
+
 </Project>
