--- a/ApiGroup/Dba/Rise.PhoneBook.DbaApi.WebApi/appsettings.json
+++ b/ApiGroup/Dba/Rise.PhoneBook.DbaApi.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "host=127.0.0.1;port=5432;database=rise;username=postgres;password=123456!A;CommandTimeout=200;ApplicationName=RiseDbaApi;"
+  }
 }
