Repository kalıpları oluşturuldu. Business, Access Manager kurguları eklendi ve metot gövdeleri oluşturuldu.

--- a/ApiGroup/Dba/Rise.PhoneBook.DbaApi.DataAccess/Rise.PhoneBook.DbaApi.DataAccess.csproj
+++ b/ApiGroup/Dba/Rise.PhoneBook.DbaApi.DataAccess/Rise.PhoneBook.DbaApi.DataAccess.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,6 +21,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Rise.PhoneBook.DbaApi.Entities\Rise.PhoneBook.DbaApi.Entities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Concrete\" />
   </ItemGroup>
 
 </Project>
