--- a/ApiGroup/Dba/Rise.PhoneBook.DbaApi.WebApi/Properties/launchSettings.json
+++ b/ApiGroup/Dba/Rise.PhoneBook.DbaApi.WebApi/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "MainContact",
       "applicationUrl": "http://localhost:5206",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "MainContact",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
