--- a/ApiGroup/ApiCore/Rise.PhoneBook.ApiCore.Core/Rise.PhoneBook.ApiCore.Core.csproj
+++ b/ApiGroup/ApiCore/Rise.PhoneBook.ApiCore.Core/Rise.PhoneBook.ApiCore.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
 
 </Project>
