- ReportApi Konfigurasyon işlemleri yapıldı - Local RabbitMq oluşturuldu. Setting dosyasından bağlantı bilgileri alınacak şekilde ayarlandı - BackgroundService oluşturularak RabbitMq  Kuyruk yönetimi ve dinleme işlemleri aktif edildi - Swagger api arayüz yapısı aktif edildi.

--- a/ApiGroup/Report/Rise.PhoneBook.ReportApi.Entities/Rise.PhoneBook.ReportApi.Entities.csproj
+++ b/ApiGroup/Report/Rise.PhoneBook.ReportApi.Entities/Rise.PhoneBook.ReportApi.Entities.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\..\ApiCore\Rise.PhoneBook.ApiCore.Core\Rise.PhoneBook.ApiCore.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Concrete\" />
+  </ItemGroup>
+
 </Project>
