--- a/ApiGroup/Report/Rise.PhoneBook.ReportApi.Business/Rise.PhoneBook.ReportApi.Business.csproj
+++ b/ApiGroup/Report/Rise.PhoneBook.ReportApi.Business/Rise.PhoneBook.ReportApi.Business.csproj
@@ -12,4 +12,13 @@
     <ProjectReference Include="..\Rise.PhoneBook.ReportApi.Entities\Rise.PhoneBook.ReportApi.Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
+  </ItemGroup>
+
 </Project>
