--- a/ApiGroup/Report/Rise.PhoneBook.ReportApi.WebApi/appsettings.json
+++ b/ApiGroup/Report/Rise.PhoneBook.ReportApi.WebApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMqSetting": {
+    "Host": "localhost",
+    "User": "guest",
+    "Pass": "guest"
+  }
 }
