- RabbitMq için Queues listesini Enum üzerinden oluşturarak; QReport, QReportProcess,QReportLastControl adımlarını dinamik olarak process list olarak işleyen yapı geliştirildi. - Postgresql report şeması altına rapor ve kuyruk verilerini takip edeceğimiz tabloları oluşturduk +Access ve business katmanlarına ilgili erişim kodları yazıldı + Mq için gerekli adım metoları yazılarak kurgular sağlandı

--- a/ApiGroup/Report/Rise.PhoneBook.ReportApi.WebApi/appsettings.json
+++ b/ApiGroup/Report/Rise.PhoneBook.ReportApi.WebApi/appsettings.json
@@ -10,5 +10,8 @@
     "Host": "localhost",
     "User": "guest",
     "Pass": "guest"
+  },
+  "ConnectionStrings": {
+    "Default": "host=127.0.0.1;port=5432;database=rise;username=postgres;password=123456!A;CommandTimeout=200;ApplicationName=Rise;"
   }
 }
