--- a/ApiGroup/Report/Rise.PhoneBook.ReportApi.DataAccess/Rise.PhoneBook.ReportApi.DataAccess.csproj
+++ b/ApiGroup/Report/Rise.PhoneBook.ReportApi.DataAccess/Rise.PhoneBook.ReportApi.DataAccess.csproj
@@ -7,8 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\ApiCore\Rise.PhoneBook.ApiCore.Core\Rise.PhoneBook.ApiCore.Core.csproj" />
     <ProjectReference Include="..\..\Dba\Rise.PhoneBook.DbaApi.Entities\Rise.PhoneBook.DbaApi.Entities.csproj" />
+    <ProjectReference Include="..\Rise.PhoneBook.ReportApi.Entities\Rise.PhoneBook.ReportApi.Entities.csproj" />
   </ItemGroup>
 
 </Project>
