-Excel Rapor Çıkartma işlemi için ExcelFactoryService eklendi. - Kuyruk içerisine ReportApi den DbaApi içerisine sorgu atmak için gerekli dinamik link setting içerisine eklendi. - Kuyruk içerisinde excel akışı için gerekli adımlar eklendi.

--- a/ApiGroup/Report/Rise.PhoneBook.ReportApi.WebApi/appsettings.json
+++ b/ApiGroup/Report/Rise.PhoneBook.ReportApi.WebApi/appsettings.json
@@ -13,5 +13,8 @@
   },
   "ConnectionStrings": {
     "Default": "host=127.0.0.1;port=5432;database=rise;username=postgres;password=123456!A;CommandTimeout=200;ApplicationName=Rise;"
+  },
+  "ReportApi": {
+    "Url": "http://localhost:5206"
   }
 }
