--- a/ApiGroup/Report/Rise.PhoneBook.ReportApi.Business/Rise.PhoneBook.ReportApi.Business.csproj
+++ b/ApiGroup/Report/Rise.PhoneBook.ReportApi.Business/Rise.PhoneBook.ReportApi.Business.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.100.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
