--- a/ApiGroup/Report/Rise.PhoneBook.ReportApi.WebApi/Rise.PhoneBook.ReportApi.WebApi.csproj
+++ b/ApiGroup/Report/Rise.PhoneBook.ReportApi.WebApi/Rise.PhoneBook.ReportApi.WebApi.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Rise.PhoneBook.ReportApi.Business\Rise.PhoneBook.ReportApi.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Content\" />
+  </ItemGroup>
+
 </Project>
